opam-version: "2.0"
name: "opsian"
version: "0.1"
synopsis: "Low overhead profiling"
maintainer: "Opsian <admin@opsian.com>"
authors:
  "Richard Warburton <richard@opsian.com>, Sadiq Jaffer <sadiq@opsian.com>"
license: "MIT"
homepage: "https://github.com/Opsian/opsian-ocaml/wiki"
bug-reports: "https://github.com/Opsian/opsian-ocaml/issues"
depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.12.0"}
]
flags: [ verbose ]
# for building native deps
depexts: [

  # Debian / Ubuntu
  # [ "libpthread-stubs0-dev" ] { os-family = "debian" | os-family = "ubuntu" }
  [ "libc-dev" ] { os-family = "debian" | os-family = "ubuntu" } # -ldl -lrt
  [ "automake" ] { os-family = "debian" | os-family = "ubuntu" }
  [ "libtool" ] { os-family = "debian" | os-family = "ubuntu" } # libunwind
  [ "liblzma-dev" ] { os-family = "debian" | os-family = "ubuntu" }

  # Alpine

  [ "libc-dev" ] {os-family = "alpine"}
  [ "automake" ] {os-family = "alpine"}
  [ "libtool" ] {os-family = "alpine"}
  ["xz-dev"] {os-family = "alpine"}

  # Arch
  # Currently not supported, needs investigating
  # [ "automake" ] {os-family = "arch"}
  # [ "libtool" ] {os-family = "arch"}
  # ["xz"] {os-family = "arch"}

  # Red Hat
  
  ["glibc-devel"] {os-famly = "fedora" | os-distribution = "rhel" | os-family = "centos"}
  ["automake"] {os-famly = "fedora" | os-distribution = "rhel" | os-family = "centos"}
  ["libtool"] {os-famly = "fedora" | os-distribution = "rhel" | os-family = "centos"}
  ["xz-devel"] {os-famly = "fedora" | os-distribution = "rhel" | os-family = "centos"}

  # Suse

  ["glibc-devel"] {os-family = "suse" | os-family = "opensuse"}
  ["automake"] {os-family = "suse" | os-family = "opensuse"}
  ["libtool"] {os-family = "suse" | os-family = "opensuse"}
  ["xz-devel"] {os-family = "suse" | os-family = "opensuse"}

]
build: [
  ["dune" "build" "--release" "-j" jobs ]
]
available: arch != "arm32" & arch != "x86_32" & os-family != "arch"
dev-repo: "git://git@github.com/Opsian/opsian-ocaml.git"

