
(include_subdirs unqualified)

(library
 (name lib_opsian)
 (modules lib_opsian)
 (library_flags -linkall)
 (foreign_stubs
  (language cxx)
  (names
    circular_queue
    collector_controller
    concurrent_map
    cpudata_reader
    data.pb
    debug_logger
    globals
    lib_opsian
    log_writer
    metrics
    network
    processor
    profiler
    protocol_handler
    signal_handler
    terminator)
  (flags
    -I%{env:THIRD_PARTY=no}/protobuf/include
    -I%{env:THIRD_PARTY=no}/openssl/include
    -I%{env:THIRD_PARTY=no}/boost/include
    -fPIC
    -Wall
    -Wformat-security
    -Wno-char-subscripts
    -Wno-sign-compare
    -Wno-strict-overflow
    -Wwrite-strings
    -funsigned-char
    -pthread))
 (c_library_flags (-lunwind)))
