
(include_subdirs unqualified)

(data_only_dirs deps)

(rule
 (deps (source_tree deps))
 (targets libprotobuf.a libboost_atomic.a libboost_chrono.a libboost_date_time.a libboost_system.a libboost_thread.a libcrypto.a libssl.a)
 (action
 (no-infer
  (progn
   (copy deps/libprotobuf.a libprotobuf.a)
   (copy deps/libboost_atomic.a libboost_atomic.a)
   (copy deps/libboost_chrono.a libboost_chrono.a)
   (copy deps/libboost_date_time.a libboost_date_time.a)
   (copy deps/libboost_system.a libboost_system.a)
   (copy deps/libboost_thread.a libboost_thread.a)
   (copy deps/libcrypto.a libcrypto.a)
   (copy deps/libssl.a libssl.a)))))

   (rule
    (deps (file add_hashes.sh) (file globals.cpp.in) (file version))
    (targets globals.cpp)
    (action
     (no-infer
      (progn
        (run ./add_hashes.sh)))))

(library
 (name lib_opsian)
 (modules lib_opsian)
 (library_flags -linkall)
 (foreign_stubs
  (language cxx)
  (names
    circular_queue
    collector_controller
    concurrent_map
    cpudata_reader
    data.pb
    debug_logger
    globals
    lib_opsian
    log_writer
    metrics
    network
    processor
    profiler
    protocol_handler
    signal_handler
    terminator)
  (flags
    -I%{env:THIRD_PARTY=no}/protobuf/include
    -I%{env:THIRD_PARTY=no}/openssl/include
    -I%{env:THIRD_PARTY=no}/boost/include
    -isystem %{env:THIRD_PARTY=no}/boost/include ; Do we need this?
    -pthread
    -fPIC
    -Wall
    -Wformat-security
    -Wno-char-subscripts
    -Wno-sign-compare
    -Wno-strict-overflow
    -Wwrite-strings
    -funsigned-char
    -std=c++0x
    -g))
 (foreign_archives protobuf boost_atomic boost_chrono boost_date_time boost_system boost_thread ssl crypto)
 (c_library_flags (
    -lunwind
    -lpthread
    -ldl
    -lrt
    -lstdc++
    -ldw)))
